--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,4 +1,7 @@
 {
     "@@locale": "pt",
-    "enter": "Começar"
+    "dashboardEnter": "Entrar",
+    "dashboardTipRegister": "Registre seus livros",
+    "dashboardTipTakeNotes": "Tome notas",
+    "dashboardTipVisualize": "Visualize seu progresso"
 }
