--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -3,5 +3,17 @@
     "dashboardEnter": "Entrar",
     "dashboardTipRegister": "Registra tus libros",
     "dashboardTipTakeNotes": "Toma notas",
-    "dashboardTipVisualize": "Visualiza tu progreso"
+    "dashboardTipVisualize": "Visualiza tu progreso",
+    "loginTitle": "Iniciar sesión",
+    "loginForgottenPassword": "¿Olvidaste tu contraseña?",
+    "loginSignInButton": "Iniciar sesión",
+    "loginCreateAccountButton": "Crear cuenta",
+    "signUpTitle": "Registro",
+    "signUpSignUpButton": "Registrarse",
+    "signUpLoginButton": "Volver al inicio de sesión",
+    "email": "Correo electrónico",
+    "emailPlaceholder": "tucorreo@dominio.com",
+    "password": "Contraseña",
+    "name": "Nombre",
+    "namePlaceholder": "Tu nombre aquí"
 }
